--- a/index_def.html
+++ b/index_def.html
@@ -47,89 +47,10 @@
             </li>
           </ul>
         </address>
-        <!-- Mobile_modal -->
-        <button class="all-menu-btn" data-menu-open type="button">
-          <svg class="all-menu-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-gamburger"></use>
-          </svg>
-        </button>
       </div>
-
-      <div class="mob-menu" data-menu>
-        <div class="container mob-menu-container">
-          <button class="modal-close-btn" data-menu-close>
-            <svg class="modal-icon-close" width="8" height="8">
-              <use href="./images/icons.svg#icon-form-close"></use>
-            </svg>
-          </button>
-          <ul class="mob-menu-list">
-            <li class="mob-menu-item">
-              <a class="mob-menu-link" href="./index.html"
-                ><span class="mob-menu-link-activ">Studio</span></a
-              >
-            </li>
-            <li class="mob-menu-item">
-              <a class="mob-menu-link" href="">Portfolio</a>
-            </li>
-            <li class="mob-menu-item">
-              <a class="mob-menu-link" href="">Contacts</a>
-            </li>
-          </ul>
-          <address class="mob-menu-contact">
-            <ul class="mob-menu-contact-list">
-              <li class="mob-menu-contact-item">
-                <a class="mob-menu-contact-linc" href="tel:+110001111111"
-                  ><span class="mob-menu-contact-linc-activ"
-                    >+11 (000) 111-11-11</span
-                  ></a
-                >
-              </li>
-              <li class="mob-menu-contact-item">
-                <a
-                  class="mob-menu-contact-linc"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
-          </address>
-          <ul class="mob-menu-icon-list">
-            <li class="footer-icone-item">
-              <a class="footer-icone-link" href="#">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icone-item">
-              <a class="footer-icone-link" href="#">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icone-item">
-              <a class="footer-icone-link" href="#">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icone-item">
-              <a class="footer-icone-link" href="#">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <!-- End Mobile_modal -->
     </header>
     <main>
       <!-- 1 Section Hero -->
-
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -138,9 +59,7 @@
           </button>
         </div>
       </section>
-
       <!-- 2 Section Advantages -->
-
       <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
@@ -205,10 +124,6 @@
           <ul class="our-team-list">
             <li class="our-team-item">
               <img
-                srcset="
-                  ./images/mark-guerrero.jpg    1x,
-                  ./images/mark-guerrero@2x.jpg 2x
-                "
                 src="./images/mark-guerrero.jpg"
                 alt="mark-guerrero"
                 width="264"
@@ -251,7 +166,6 @@
             </li>
             <li class="our-team-item">
               <img
-                srcset="./images/tom-ford.jpg 1x, ./images/tom-ford@2x.jpg 2x"
                 src="./images/tom-ford.jpg"
                 alt="tom-ford"
                 width="264"
@@ -294,10 +208,6 @@
             </li>
             <li class="our-team-item">
               <img
-                srcset="
-                  ./images/camila-garcia.jpg    1x,
-                  ./images/camila-garcia@2x.jpg 2x
-                "
                 src="./images/camila-garcia.jpg"
                 alt="camila-garcia"
                 width="264"
@@ -340,10 +250,6 @@
             </li>
             <li class="our-team-item">
               <img
-                srcset="
-                  ./images/daniel-wilson.jpg    1x,
-                  ./images/daniel-wilson@2x.jpg 2x
-                "
                 src="./images/daniel-wilson.jpg"
                 alt="daniel-wilson"
                 width="264"
@@ -396,40 +302,12 @@
           <ul class="our-portfolio-list">
             <li class="our-portfolio-item">
               <div class="our-portfolio-picture">
-                <picture>
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 1158px)"
-                    srcset="
-                      ./images/portfolio-banking-app.jpg    1x,
-                      ./images/portfolio-banking-app@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 768px)"
-                    srcset="
-                      ./images/portfolio-banking-app-tab.jpg    1x,
-                      ./images/portfolio-banking-app-tab@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(max-width: 767px)"
-                    srcset="
-                      ./images/portfolio-banking-app-mob.jpg    1x,
-                      ./images/portfolio-banking-app-mob@2x.jpg 2x
-                    "
-                  />
-                  <img
-                    class="our-portfolio-img"
-                    src="./images/portfolio-banking-app.jpg"
-                    alt="portfolio-banking-app"
-                    width="360"
-                    height="300"
-                  />
-                </picture>
-
+                <img
+                  src="./images/portfolio-banking-app.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="our-portfolio-text-hover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -444,40 +322,12 @@
 
             <li class="our-portfolio-item">
               <div class="our-portfolio-picture">
-                <picture>
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 1158px)"
-                    srcset="
-                      ./images/portfolio-cashless-payment.jpg    1x,
-                      ./images/portfolio-cashless-payment@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 768px)"
-                    srcset="
-                      ./images/portfolio-cashless-payment-tab.jpg    1x,
-                      ./images/portfolio-cashless-payment-tab@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(max-width: 767px)"
-                    srcset="
-                      ./images/portfolio-cashless-payment-mob.jpg    1x,
-                      ./images/portfolio-cashless-payment-mob@2x.jpg 2x
-                    "
-                  />
-                  <img
-                    class="our-portfolio-img"
-                    src="./images/portfolio-cashless-payment.jpg"
-                    alt="portfolio-cashless-payment"
-                    width="360"
-                    height="300"
-                  />
-                </picture>
-
+                <img
+                  src="./images/portfolio-cashless-payment.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="our-portfolio-text-hover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -492,40 +342,12 @@
 
             <li class="our-portfolio-item">
               <div class="our-portfolio-picture">
-                <picture>
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 1158px)"
-                    srcset="
-                      ./images/portfolio-meditation-app.jpg    1x,
-                      ./images/portfolio-meditation-app@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 768px)"
-                    srcset="
-                      ./images/portfolio-meditation-app-tab.jpg    1x,
-                      ./images/portfolio-meditation-app-tab@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(max-width: 767px)"
-                    srcset="
-                      ./images/portfolio-meditation-app-mob.jpg    1x,
-                      ./images/portfolio-meditation-app-mob@2x.jpg 2x
-                    "
-                  />
-                  <img
-                    class="our-portfolio-img"
-                    src="./images/portfolio-meditation-app.jpg"
-                    alt="portfolio-meditation-app"
-                    width="360"
-                    height="300"
-                  />
-                </picture>
-
+                <img
+                  src="./images/portfolio-meditation-app.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="our-portfolio-text-hover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -540,40 +362,12 @@
 
             <li class="our-portfolio-item">
               <div class="our-portfolio-picture">
-                <picture>
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 1158px)"
-                    srcset="
-                      ./images/portfolio-taxi-service.jpg    1x,
-                      ./images/portfolio-taxi-service@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 768px)"
-                    srcset="
-                      ./images/portfolio-taxi-service-tab.jpg    1x,
-                      ./images/portfolio-taxi-service-tab@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(max-width: 767px)"
-                    srcset="
-                      ./images/portfolio-taxi-service-mob.jpg    1x,
-                      ./images/portfolio-taxi-service-mob@2x.jpg 2x
-                    "
-                  />
-                  <img
-                    class="our-portfolio-img"
-                    src="./images/portfolio-taxi-service.jpg"
-                    alt="portfolio-taxi-service"
-                    width="360"
-                    height="300"
-                  />
-                </picture>
-
+                <img
+                  src="./images/portfolio-taxi-service.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="our-portfolio-text-hover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -588,40 +382,12 @@
 
             <li class="our-portfolio-item">
               <div class="our-portfolio-picture">
-                <picture>
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 1158px)"
-                    srcset="
-                      ./images/portfolio-screen-illustrations.jpg    1x,
-                      ./images/portfolio-screen-illustrations@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 768px)"
-                    srcset="
-                      ./images/portfolio-screen-illustrations-tab.jpg    1x,
-                      ./images/portfolio-screen-illustrations-tab@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(max-width: 767px)"
-                    srcset="
-                      ./images/portfolio-screen-illustrations-mob.jpg    1x,
-                      ./images/portfolio-screen-illustrations-mob@2x.jpg 2x
-                    "
-                  />
-                  <img
-                    class="our-portfolio-img"
-                    src="./images/portfolio-screen-illustrations.jpg"
-                    alt="portfolio-screen-illustrations"
-                    width="360"
-                    height="300"
-                  />
-                </picture>
-
+                <img
+                  src="./images/portfolio-screen-illustrations.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="our-portfolio-text-hover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -636,40 +402,12 @@
 
             <li class="our-portfolio-item">
               <div class="our-portfolio-picture">
-                <picture>
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 1158px)"
-                    srcset="
-                      ./images/portfolio-online-courses.jpg    1x,
-                      ./images/portfolio-online-courses@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(min-width: 768px)"
-                    srcset="
-                      ./images/portfolio-online-courses-tab.jpg    1x,
-                      ./images/portfolio-online-courses-tab@2x.jpg 2x
-                    "
-                  />
-                  <source
-                    class="our-portfolio-img"
-                    media="(max-width: 767px)"
-                    srcset="
-                      ./images/portfolio-online-courses-mob.jpg    1x,
-                      ./images/portfolio-online-courses-mob@2x.jpg 2x
-                    "
-                  />
-                  <img
-                    class="our-portfolio-img"
-                    src="./images/portfolio-online-courses.jpg"
-                    alt="portfolio-online-courses"
-                    width="360"
-                    height="300"
-                  />
-                </picture>
-
+                <img
+                  src="./images/portfolio-online-courses.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="our-portfolio-text-hover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -843,6 +581,5 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
   </body>
 </html>
